--- a/Android/HW7/app/src/main/AndroidManifest.xml
+++ b/Android/HW7/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -31,6 +33,7 @@
         <activity
             android:name=".MapsActivity"
             android:exported="false"
+            android:theme="@style/Theme.HW7"
             android:label="@string/title_activity_maps" />
         <activity
             android:name=".MainActivity"
